# markargs

./: CMakeLists.txt  README.md
src/: rules.md
src/lexical_analysis/: CMakeLists.txt  token.cpp  token.hpp
src/semantic_analysis/: symbol_table.cpp  symbol_table.hpp
src/syntax_analysis/: CMakeLists.txt  failing_input.txt  inorder_iterator.cpp  inorder_iterator_tests.cpp  input.txt  main.cpp  syntax_tree.cpp  syntax_tree.hpp
src/tokenizer/: CMakeLists.txt  main.cpp  syntax_error.hpp  token.hpp  tokenizer.cpp  tokenizer.hpp
